REST API getting list Code change
