# src/api/user.js
@@ -438,25 +438,16 @@ router.put('/modify', async(req,res) => {
 router.get('/dvList', async(req,res) => {
 
     var param = {
-        page_no : req.query.page_no,
-        user_name : req.query.user_name,
-        login_id : req.query.login_id,
+        // user_name : req.query.user_name,
+        // login_id : req.query.login_id,
         user_level : req.query.user_level
     }
 
-    const itmesPerPage = 10;
-    const currentPage = (param.page_no - 1) * itmesPerPage;
-
-    param.page_no = currentPage;
-
     const dvList = await mysql.query("user", "selectDvList", param)
-    const dvListCount = await mysql.query('user', 'selectDvListCount', param);
 
-    const totalCount = Math.ceil(dvListCount.length / itmesPerPage);
     return res.json({
         resultCode : 200,
         resultMsg : 'OK',
-        totalPage : totalCount,
         data : dvList
     })
 
